[workspace]
members = [
    "crates/mlua-luau-scheduler",
    "crates/luksruntime",
    "crates/lukscli",
    "tests/dlopen/source",
    "luks-std/std-template",
    "luks-std/Json",
    "luks-std/Http"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/luks-luau/luks"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
# panic = "unwind" is required for catch_unwind to work in FFI boundaries
# abort mode prevents panic recovery and causes "panic_nounwind" crashes
# panic = "abort"
strip = true
