[package]
name = "luksruntime"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "luksruntime"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.11", features = ["luau", "vendored", "async"] }
mlua-sys = "0.10"
libloading = "0.9"
mlua-luau-scheduler = { path = "../mlua-luau-scheduler" }
async-executor = "1.13"
futures-lite = "2.6"
tracing = "0.1"
async-io = "2.4"
luks-module-sys = { version = "0.1.0", path = "../luks-module-sys" }

[target.'cfg(not(any(target_os = "android", all(target_os = "linux", target_arch = "x86"))))'.dependencies]
mlua = { version = "0.11", features = ["luau-jit"] }
